# 271rs

./: eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  tash everything (including untracked files)
01/: rustup.md
02/: bye.py
12/: Cargo.toml
12/src/: main.rs
22/: words.txt
22/src/: main.rs
31/src/: lib.rs  main.rs
32/src/: lib.rs  main.rs
41/: Cargo.toml
41/src/: .main.rs.swp  lib.rs  main.rs
42/: mine_15.txt  mine_austen.txt  ref_lipsum.txt  tester.sh
42/src/: main.rs
51/: Cargo.toml
51/src/: lib.rs  main.rs
71/src/: lib.rs  lib.rs.bak  main.rs
72/src/: ix.rs  main.rs
81/: Cargo.toml
81/src/: encode.rs  field.rs  hash.rs  lib.rs  point.rs
81/tests/: vectors.rs
82/: Cargo.toml
82/src/: lib.rs  main.rs
91/src/: lib.rs  main.rs
92/src/: lib.rs  main.rs
A1/src/: lib.rs  main.rs
A2/: data.txt
A2/src/: main.rs
B2/src/: main.rs
C1/src/: main.rs
C2/src/: main.rs
E2/: Cargo.toml
E2/src/: main.rs
actual/: Cargo.toml
actual/src/: main.rs
midterm/: Cargo.toml
midterm/src/: main.rs
